designer layout issues fixed; adjust menu layout.

--- a/src/index.less
+++ b/src/index.less
@@ -4,9 +4,9 @@ body,
   height: 100%;
 }
 
-:global(.ant-layout) {
-  min-height: 100%;
-}
+// :global(.ant-layout) {
+//   min-height: 100%;
+// }
 
 canvas {
   display: block;
